# Sparrows

./: Makefile.am  Makefile.in  ProjectHome.md  README.md  configure.in
inc/: cgi.h  config.h.in  io_epoll.h  io_select.h  proxy.h  shttpd_type.h  static.h
libcda/inc/: c_define.h  c_hash.h  c_list.h  c_mem.h  c_prtree.h  c_regex.h
libcda/src/: c_array.c  c_bhtree.c  c_hash.c  c_mem.c  c_prtree.c  c_xml.c
src/: io.c  io_select.c  request.c  rewrite.c
trunk/: Makefile  Makefile.am  config.h  configure  configure.in  mod_io.xml  server  shttpd_io
trunk/.deps/: httpd_common.Po  io.Po  mod_io.Po
trunk/autom4te.cache/: output.1  traces.1  traces.2
trunk/inc/: httpd_common.h  io.h  request.h  responder.h  rewrite.h  shttpd_def.h
trunk/resource/: mod_io.xml
trunk/sparrows/: .directory  AUTHORS  Makefile  Makefile.am  Makefile.in  README  benmark  config.h  config.h.in  config.status  config.xml  configure  configure.in  gmon.out  gprof  mod_static.xml  pg.sh  run.sh  shttpd  shttpd_io  static.sh  svn-commit.tmp
trunk/sparrows/.deps/: httpd_common.Po  io.Po  io_epoll.Po  modmanage.Po  request.Po  responder.Po
trunk/sparrows/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
trunk/sparrows/doc/: FAQ  config_HOWTO  detail  flowchart  install_HOWTO  na
trunk/sparrows/inc/: httpd_common.h  io.h  io_epoll.h  io_process.h  modmanage.h  request.h  responder.h  shttpd_type.h
trunk/sparrows/mods/: build  configure.in  tags
trunk/sparrows/mods/inc/: mod_cgi.h  mod_fastcgi.h  mod_proxy.h  mod_rewrite.h  mod_static.h  shttpd_type.h
trunk/sparrows/mods/resources/: mod_cgi.xml  mod_proxy.xml  mod_rewrite.xml  mod_static.xml  mod_static_2.xml
trunk/sparrows/mods/src/: mod_cgi.c  mod_fastcgi.c  mod_proxy.c  mod_rewrite.c  mod_static.c
trunk/sparrows/resource/: config.xml  config_cn.xml  io.xml  responder.xml
trunk/sparrows/src/: httpd_common.c  io.c  io_epoll.c  io_process.c  modmanage.c  request.c  responder.c  svn-commit.tmp
trunk/sparrows/www/: f.iso  index.html  index_2.html  j.iso  player.html  win7.iso
trunk/sparrows/www/cgi-bin/: echo.sh  index.sh
trunk/sparrows/www/home/: arch.iso
trunk/src/: cgi.c  httpd_common.c  io.c  io_epoll.c  proxy.c  static.c
workspace/: .directory
workspace/dboperater-0.1/: Makefile  Makefile.am  Makefile.in  config.status
workspace/debug/: cda_test  cda_test.c  cli  cli.c  exec.c  hash_size  hash_size.c  inttochar  inttochar.c  ksearch  ksearch.c  my_exec  net  net.c  pipe  pipe.c  sendmsg.c  sym  sym.c  testxml  xml  xml.c  xmloutput
workspace/libcda/: Makefile  Makefile.am  Makefile.in  config.status  libtool
workspace/smartappserver/: Makefile  Makefile.in  config.h  config.h.in  (+3 more)
(+57 files in other folders)
