bin_PROGRAMS=shttpd
shttpd_SOURCES=src/io.c src/io_select.c src/io_epoll.c src/request.c src/static.c src/proxy.c src/cgi.c src/rewrite.c libcda/src/c_array.c libcda/src/c_list.c libcda/src/c_mem.c libcda/src/c_hash.c libcda/src/c_bhtree.c libcda/src/c_prtree.c libcda/src/c_string.c libcda/src/c_xml.c
INCLUDES=-I$(CURRENTPATH)inc/ -I$(CURRENTPATH)libcda/inc/
noinst_HEADERS=inc/*.h libcda/inc/*.h
